# maid.felix

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  update.yml  update_timetable.yml
data/3CIFS/: 3CIFS1.json  3CIFS10.json  3CIFS11.json  3CIFS12.json  3CIFS13.json  3CIFS14.json  3CIFS15.json  3CIFS16.json  3CIFS17.json  3CIFS18.json  3CIFS19.json  3CIFS2.json  3CIFS20.json  3CIFS21.json  3CIFS22.json  3CIFS23.json  3CIFS24.json  3CIFS25.json  3CIFS26.json  3CIFS27.json  3CIFS28.json  3CIFS29 .json  3CIFS3.json  3CIFS30 .json  3CIFS31.json  3CIFS32.json  3CIFS33.json  3CIFS34.json  3CIFS35.json  3CIFS36.json  3CIFS37.json  3CIFS38.json  3CIFS39.json  3CIFS4.json  3CIFS40.json  3CIFS41.json  3CIFS42.json  3CIFS43.json  3CIFS44.json  3CIFS45.json  (+7 more)
data/4BABM/: 4BABM1.json  4BABM10.json  4BABM11.json  4BABM12.json  4BABM13.json  4BABM14.json  4BABM15.json  4BABM16.json  4BABM17.json  4BABM18.json  4BABM2.json  4BABM3.json  4BABM4.json  4BABM5.json  4BABM6.json  4BABM7.json  4BABM8.json  4BABM9.json
data/4BIS/: 4BIS1.json  4BIS2.json  4BIS3.json  4BIS4.json  4BIS5.json  4BIS6.json  4BIS7.json
data/4CL/: 4CL1.json  4CL2.json  4CL3.json  4CL4.json  4CL5.json  4CL6.json
data/4ECWF/: 4ECWF10.json  4ECWF12.json  4ECWF14.json  4ECWF15.json  4ECWF2.json  4ECWF3.json  4ECWF4.json  4ECWF5.json  4ECWF7.json  4ECWF8.json  4ECWF9.json
data/4ECwF/: 4ECwF1.json  4ECwF11.json  4ECwF13.json  4ECwF15.json  4ECwF3.json  4ECwF6.json
data/4FIN/: 4FIN1.json  4FIN3.json  4FIN6.json  4FIN8.json
data/4Fin/: 4Fin1.json  (+7 more)
src/: instance.rs  main.rs  types.rs
(+101 files in other folders)
