[package]
name = "maid-felix"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
dotenv = "0.15.0"
scraper = "0.13.0"
reqwest = { version = "0.11.11", features = ["blocking", "cookies"] }
regex = "1.6.0"
lazy_static = "1.4.0"
rand = "0.8.5"
